--- a/aa.ipynb
+++ b/aa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "[200 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cholesterol\n",
+       "HIGH      103\n",
+       "NORMAL     97\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Cholesterol'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (791285630.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    df.\u001b[0m\n\u001b[1;37m       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "df."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -754,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -919,31 +960,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Drug'] = df['Drug'].str.upper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Drug\n",
-       "DRUGY    91\n",
-       "DRUGX    54\n",
-       "DRUGA    23\n",
-       "DRUGC    16\n",
-       "DRUGB    16\n",
+       "DrugY    91\n",
+       "drugX    54\n",
+       "drugA    23\n",
+       "drugC    16\n",
+       "drugB    16\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -997,49 +1029,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
-       "      <td>29</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12.856</td>\n",
-       "      <td>DRUGA</td>\n",
+       "      <th>0</th>\n",
+       "      <td>23</td>\n",
+       "      <td>F</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>25.355</td>\n",
+       "      <td>DrugY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>144</th>\n",
-       "      <td>39</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>9.664</td>\n",
-       "      <td>DRUGA</td>\n",
+       "      <th>123</th>\n",
+       "      <td>36</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>16.753</td>\n",
+       "      <td>DrugY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>32</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10.292</td>\n",
-       "      <td>DRUGA</td>\n",
+       "      <th>122</th>\n",
+       "      <td>34</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>22.456</td>\n",
+       "      <td>DrugY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>110</th>\n",
-       "      <td>50</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.490</td>\n",
-       "      <td>DRUGA</td>\n",
+       "      <th>121</th>\n",
+       "      <td>15</td>\n",
+       "      <td>M</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>17.206</td>\n",
+       "      <td>DrugY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>36</th>\n",
-       "      <td>32</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.445</td>\n",
-       "      <td>DRUGA</td>\n",
+       "      <th>120</th>\n",
+       "      <td>28</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>27.064</td>\n",
+       "      <td>DrugY</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1051,49 +1083,49 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>74</th>\n",
-       "      <td>31</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>17.069</td>\n",
-       "      <td>DRUGY</td>\n",
+       "      <th>30</th>\n",
+       "      <td>18</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>8.750</td>\n",
+       "      <td>drugX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>73</th>\n",
-       "      <td>41</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22.905</td>\n",
-       "      <td>DRUGY</td>\n",
+       "      <th>32</th>\n",
+       "      <td>49</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>11.014</td>\n",
+       "      <td>drugX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>19.675</td>\n",
-       "      <td>DRUGY</td>\n",
+       "      <th>34</th>\n",
+       "      <td>53</td>\n",
+       "      <td>M</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>HIGH</td>\n",
+       "      <td>14.133</td>\n",
+       "      <td>drugX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>54</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>24.658</td>\n",
-       "      <td>DRUGY</td>\n",
+       "      <th>132</th>\n",
+       "      <td>49</td>\n",
+       "      <td>M</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>13.598</td>\n",
+       "      <td>drugX</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>15</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>16.725</td>\n",
-       "      <td>DRUGY</td>\n",
+       "      <th>199</th>\n",
+       "      <td>40</td>\n",
+       "      <td>F</td>\n",
+       "      <td>LOW</td>\n",
+       "      <td>NORMAL</td>\n",
+       "      <td>11.349</td>\n",
+       "      <td>drugX</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1101,23 +1133,23 @@
        "</div>"
       ],
       "text/plain": [
-       "     Age  Sex  BP  Cholesterol  Na_to_K   Drug\n",
-       "66    29    1   0            0   12.856  DRUGA\n",
-       "144   39    1   0            0    9.664  DRUGA\n",
-       "118   32    0   0            1   10.292  DRUGA\n",
-       "110   50    1   0            0    7.490  DRUGA\n",
-       "36    32    1   0            1    9.445  DRUGA\n",
-       "..   ...  ...  ..          ...      ...    ...\n",
-       "74    31    1   0            1   17.069  DRUGY\n",
-       "73    41    0   2            1   22.905  DRUGY\n",
-       "71    28    0   2            0   19.675  DRUGY\n",
-       "68    54    1   2            0   24.658  DRUGY\n",
-       "99    15    0   0            1   16.725  DRUGY\n",
+       "     Age Sex      BP Cholesterol  Na_to_K   Drug\n",
+       "0     23   F    HIGH        HIGH   25.355  DrugY\n",
+       "123   36   F  NORMAL        HIGH   16.753  DrugY\n",
+       "122   34   M  NORMAL        HIGH   22.456  DrugY\n",
+       "121   15   M    HIGH      NORMAL   17.206  DrugY\n",
+       "120   28   M  NORMAL        HIGH   27.064  DrugY\n",
+       "..   ...  ..     ...         ...      ...    ...\n",
+       "30    18   F  NORMAL      NORMAL    8.750  drugX\n",
+       "32    49   M     LOW      NORMAL   11.014  drugX\n",
+       "34    53   M  NORMAL        HIGH   14.133  drugX\n",
+       "132   49   M     LOW      NORMAL   13.598  drugX\n",
+       "199   40   F     LOW      NORMAL   11.349  drugX\n",
        "\n",
        "[200 rows x 6 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1128,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1137,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1328,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1405,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1558,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1567,7 +1599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1583,7 +1615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1592,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1635,7 +1667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1655,7 +1687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1695,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1724,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1815,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2153,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2184,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2193,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2213,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2249,7 +2281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2277,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2286,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
